--- a/Javascript/.vscode/settings.json
+++ b/Javascript/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "comprenderlo",
+        "dinámicamente",
         "inicialización",
-        "reutilizable"
+        "reutilizable",
+        "tipado"
     ]
 }
