reanudando operadores.js

--- a/Javascript/.vscode/settings.json
+++ b/Javascript/.vscode/settings.json
@@ -4,6 +4,7 @@
         "comprenderlo",
         "dinámicamente",
         "inicialización",
+        "reasignarle",
         "reutilizable",
         "tipado"
     ]
