finish condicionales, pasamos al ejercicio final de condiconales: PIEDRA, PAPEL O TIJERA

--- a/Javascript/.vscode/settings.json
+++ b/Javascript/.vscode/settings.json
@@ -4,6 +4,7 @@
         "comprenderlo",
         "dinámicamente",
         "inicialización",
+        "promt",
         "reasignarle",
         "reutilizable",
         "tipado"
